# ixa_core

./: .gitignore  Cargo.toml  README.md  SemanticDifferences.md
doc/: patterns.md
examples/basic-infection/: incidence_report.rs  infection_manager.rs  main.rs  people.rs  transmission_manager.rs
examples/disease_model/: Cargo.toml
examples/disease_model/src/: incidence_report.rs  infection_manager.rs  main.rs  people.rs  transmission_manager.rs
src/: any_map.rs  context.rs  error.rs  global_properties.rs  hashing.rs  index.rs  init_list.rs  lib.rs  log.rs  new_trait.rs  people.rs  property.rs  property_map.rs  query.rs  random.rs  trait_map.rs
src/entity/: context_ext.rs  data.rs  index.rs  init_list.rs  mod.rs  query.rs
src/people/: context_ext.rs  index.rs  init_list.rs  mod.rs  people_data.rs  query.rs
