[workspace]
resolver = "3"
members  = [
#    "examples/disease_model"
]

[workspace.package]
authors = ["The Ixa Developers"]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]
# Workspace Dependencies
ixa-core = { path = "." }

# Ixa Core dependencies
log        = "^0.4.26"
log4rs     = "^1.3.0"
rand       = "^0.9.0"
rustc-hash = "^2.1.1"
seq-macro  = "^0.3.6"
serde      = { version = "^1.0.219", features = ["derive"] }
serde_json = "^1.0.140"
paste      = "1.0.15"
ctor       = "^0.4.1"
tempfile    = "^3.19.0"

# Other dependencies
csv        = "1.3.1"
rand_distr = "0.5.1"


[package]
name = "ixa-core"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
log.workspace        = true
log4rs.workspace     = true
rand.workspace       = true
rustc-hash.workspace = true
seq-macro.workspace  = true
serde.workspace      = true
serde_json.workspace = true
paste.workspace      = true
ctor.workspace       = true
tempfile.workspace   = true

[lints.clippy]
wrong_self_convention   = "allow"
missing_panics_doc      = "allow"
module-name-repetitions = "allow"
implicit_hasher         = "allow"
